--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <div id="preview"></div>
       <div id="inputs" style="flex-grow: 1; padding: 25px">
         <label for="eye_col">Eye color</label>
-        <input name="eye_col" type="color" value="#784034">
+        <input name="eye_col" id="eye_col" type="color" value="#784034">
         <label for="hair_col">Hair color</label>
         <input name="hair_col" id="hair_col" type="color" value="#BF5432">
         <label for="pant_col">Pants color</label>
@@ -20,6 +20,9 @@
         <input type="number" name="pant" id="pant" value="1" min="1" max="4">
         <label for="pant">Accessory</label>
         <input type="number" name="accessory" id="accessory" value="1" min="1" max="20">
+        <button id="copy">Copy to clipboard</button>
+        <p><i>Why no options for skin?</i></p><p>Because CA does some insane pixel matching color replacement on the base sprite that this open source engine doesn't have the capability to do</p>
+        <p><i>Why do the eyes not update?</i></p><p>Because I am lazy, they will soon</p>
       </div>
     </div>
 <script>
@@ -82,6 +85,35 @@ me.device.onReady(function () {
 });
 
 function loaded() {
+  document.getElementById('copy').addEventListener('click', () => {
+    const vals = [
+      1,
+      document.getElementById('hair').value,
+      document.getElementById('shirt').value,
+      document.getElementById('pant').value,
+      document.getElementById('accessory').value
+    ];
+    const eye_col = document.getElementById('eye_col').value;
+    vals.push(...rgb2hsv(
+      parseInt("0x" + eye_col.slice(1,3)) / 255,
+      parseInt("0x" + eye_col.slice(3,5)) / 255,
+      parseInt("0x" + eye_col.slice(5,7)) / 255
+    ));
+    const hair_col = document.getElementById('hair_col').value;
+    vals.push(...rgb2hsv(
+      parseInt("0x" + hair_col.slice(1,3)) / 255,
+      parseInt("0x" + hair_col.slice(3,5)) / 255,
+      parseInt("0x" + hair_col.slice(5,7)) / 255
+    ));
+    const pant_col = document.getElementById('pant_col').value;
+    vals.push(...rgb2hsv(
+      parseInt("0x" + pant_col.slice(1,3)) / 255,
+      parseInt("0x" + pant_col.slice(3,5)) / 255,
+      parseInt("0x" + pant_col.slice(5,7)) / 255
+    ));
+    vals.push(1);
+    navigator.clipboard.writeText(vals.join());
+  });
   me.game.world.addChild(new me.ColorLayer("background", "#51a8f5"));
   const male = new me.Sprite(32, 32, {
     image: 'male',
@@ -229,6 +261,12 @@ function loaded() {
       accessory.setCurrentAnimation(e.target.value);
     }
   });
+}
+
+function rgb2hsv(r,g,b) {
+  let v=Math.max(r,g,b), c=v-Math.min(r,g,b);
+  let h= c && ((v==r) ? (g-b)/c : ((v==g) ? 2+(b-r)/c : 4+(r-g)/c)); 
+  return [parseInt(((60*(h<0?h+6:h)) / 360) * 100), parseInt((v&&c/v) * 100), parseInt(v * 100)];
 }
 </script>
   </body>
