--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <button id="copy">Copy to clipboard</button>
         <p><i>Why no options for skin?</i></p><p>Because CA does some insane pixel matching color replacement on the base sprite that this open source engine doesn't have the capability to do</p>
         <p><i>Why do the eyes not update?</i></p><p>Because I am lazy, they will soon</p>
+        <p><a href="https://github.com/robopossum/stardew-character-creator">Source</a></p>
       </div>
     </div>
 <script>
