--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <input type="number" name="accessory" id="accessory" value="1" min="1" max="20">
         <button id="copy">Copy to clipboard</button>
         <p><i>Why no options for skin?</i></p><p>Because CA does some insane pixel matching color replacement on the base sprite that this open source engine doesn't have the capability to do</p>
-        <p><i>Why do the eyes not update?</i></p><p>Because I am lazy, they will soon</p>
         <p><a href="https://github.com/robopossum/stardew-character-creator">Source</a></p>
       </div>
     </div>
@@ -65,6 +64,11 @@ const resources = [
     name: 'hair_fancy',
     type: 'image',
     src: 'hairstyles2.png'
+  },
+  {
+    name: 'eyes',
+    type: 'image',
+    src: 'eyes.png'
   }
 ];
 
@@ -125,6 +129,26 @@ function loaded() {
   male.addAnimation('front', [0]);
   male.setCurrentAnimation('front');
   me.game.world.addChild(male);
+  
+  const eyes = new me.Sprite(32, 32, {
+    image: 'eyes',
+    framewidth: 16,
+    frameheight: 32,
+    anchorPoint: new me.Vector2d(0.5, 0.5)
+  });
+  eyes.addAnimation('front', [0]);
+  eyes.setCurrentAnimation('front');
+  me.game.world.addChild(eyes);
+  
+  document.getElementById('eye_col').addEventListener('change', (e) => {
+    eyes.tint.setColor(
+      parseInt("0x" + e.target.value.slice(1,3)),
+      parseInt("0x" + e.target.value.slice(3,5)),
+      parseInt("0x" + e.target.value.slice(5,7))
+    );
+  });
+  
+  document.getElementById('eye_col').dispatchEvent(new Event('change'));
   
   const shirt = new me.Sprite(32, 35, {
     image: 'shirt',
